codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__runtime_fallback_to_human_warning.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---





⚠ Runtime fallback to human review
  runtime lease unavailable for destructive patch


› Ask Codex to do anything

  ? for shortcuts                                                            100% context left
