codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui_app_server__chatwidget__tests__runtime_recovery_warning.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: term.backend().vt100().screen().contents()
---





⚠ Runtime recovery
  switched to conservative enforcement while the runtime recovers


› Ask Codex to do anything

  ? for shortcuts                                                            100% context left
